[project]
name = "rnts"
version = "0.1.0"
description = "a build tool written in Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dill>=0.4.1",
    "filelock>=3.29.4",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "ruff>=0.15.17",
]

[project.scripts]
rnts = "rnts.cli:main"

[tool.basedpyright]
include = ["src"]
typeCheckingMode = "all"
